fixed collapsed footer padding

--- a/source/stylesheets/shared/_footer.css.sass
+++ b/source/stylesheets/shared/_footer.css.sass
@@ -33,6 +33,6 @@
 
   .copyright
     @extend small
-    padding-bottom: 2em
+    padding: 2.5em
     @media only screen and (min-width: $break-medium)
       text-align: right
